# openigtlink-ng

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
core-c/: API.md  CMakeLists.txt  FUZZ_PLAN.md  README.md
core-c/cmake/: run_parity_compare.cmake
core-c/docs/history/: fuzz_plan_initial.md
core-c/fuzz/: README.md  fuzz_point.c  fuzz_position.c  fuzz_sensor.c  fuzz_status.c  fuzz_transform.c
core-c/fuzz/seeds/: gen.py
core-c/include/oigtl_c/: ascii.h  byte_order.h  crc64.h  errors.h  header.h
core-c/src/: ascii.c  crc64.c  header.c
core-c/src/messages/: capability.c  colort.c  colortable.c  command.c  ext_header.c  get_capabil.c  get_colort.c  get_image.c  get_imgmeta.c  get_lbmeta.c  get_ndarray.c  get_point.c  get_polydata.c  get_position.c  get_qtdata.c  get_qtrans.c  get_sensor.c  get_status.c  get_string.c  get_tdata.c  get_traj.c  get_trans.c  get_vmeta.c  header.c  image.c  imgmeta.c  lbmeta.c  ndarray.c  point.c  position.c  qtdata.c  qtrans.c  rts_bind.c  rts_capabil.c  rts_command.c  rts_image.c  rts_imgmeta.c  rts_lbmeta.c  rts_ndarray.c  rts_point.c  (+39 more)
core-c/tests/: messages_test.c  parity_emitter.c  parity_emitter_py.py  runtime_test.c
core-cpp/: API.md  CLIENT_GUIDE.md  CLIENT_TRANSPORT_PLAN.md  CMakeLists.txt  PLAN.md  README.md  TRANSPORT_PLAN.md  WINDOWS_PLAN.md
core-cpp/benches/: bench_codec.cpp  bench_transport_ours.cpp  bench_transport_upstream.cpp
core-cpp/cmake/: ar_merge_objects.cmake  run_parity_compare.cmake
core-cpp/compat/: API_COVERAGE.md  MIGRATION.md  PLUS_AUDIT.md  PORTING_PLUS.md  README.md
core-cpp/compat/plus-patches/: 0001-PlusClientInfoMessage-gate-clone-on-OIGTL_NG_SHIM.patch  0001-PlusOpenIGTLink-support-hardened-reimplementations.patch  0002-PlusTrackedFrameMessage-gate-clone-and-content-access.patch  0003-PlusUsMessage-gate-clone-on-OIGTL_NG_SHIM.patch  README.md  UPSTREAM_PR.md
core-cpp/compat/src/: igtlBindMessage.cxx  igtlCapabilityMessage.cxx  igtlClientSocket.cxx  igtlColorTableMessage.cxx  igtlCommandMessage.cxx  igtlImageMessage.cxx  igtlImageMetaMessage.cxx  igtlLabelMetaMessage.cxx  igtlLightObject.cxx  igtlMath.cxx  igtlMessageBase.cxx  igtlMessageFactory.cxx  igtlNDArrayMessage.cxx  igtlObject.cxx  igtlPointMessage.cxx  igtlPolyDataMessage.cxx  igtlPositionMessage.cxx  igtlQuaternionTrackingDataMessage.cxx  igtlQueryMessage.cxx  igtlSensorMessage.cxx  igtlServerSocket.cxx  igtlSocket.cxx  igtlStatusMessage.cxx  igtlStringMessage.cxx  igtlTimeStamp.cxx  igtlTrackingDataMessage.cxx  igtlTrajectoryMessage.cxx  igtlTransformMessage.cxx
core-cpp/compat/tests/: emitter_shim.cxx  emitter_upstream.cxx  message_factory_test.cxx  messagebase_overflow_test.cxx  plus_header_surface_test.cxx  server_restrictions_test.cxx  smartpointer_test.cxx  socket_roundtrip_test.cxx  subclass_protected_surface_test.cxx  transform_parity_test.cxx  upstream_examples_interop.py  upstream_examples_interop.sh  v3_metadata_audit_test.cxx
core-cpp/docs/history/: client_transport_plan.md  codec_plan.md  transport_plan.md
core-cpp/examples/: compat_hello.cpp  resilient_client.cpp  tracker_pair.cpp
core-cpp/fuzz/: README.md  fuzz_compat.cc  fuzz_header.cc  fuzz_oracle.cc
core-cpp/include/oigtl/: client.hpp  envelope.hpp  pack.hpp  server.hpp
core-cpp/src/: client.cpp  envelope.cpp  oracle_cli.cpp  server.cpp
core-cpp/src/messages/: bind.cpp  capability.cpp  colort.cpp  colortable.cpp  command.cpp  ext_header.cpp  get_bind.cpp  get_capabil.cpp  get_colort.cpp  get_image.cpp  get_imgmeta.cpp  get_lbmeta.cpp  get_ndarray.cpp  get_point.cpp  get_polydata.cpp  get_position.cpp  get_qtdata.cpp  get_qtrans.cpp  get_sensor.cpp  get_status.cpp  get_string.cpp  get_tdata.cpp  get_traj.cpp  get_trans.cpp  get_vmeta.cpp  header.cpp  image.cpp  imgmeta.cpp  lbmeta.cpp  metadata.cpp  ndarray.cpp  point.cpp  polydata.cpp  position.cpp  qtdata.cpp  qtrans.cpp  register_all.cpp  rts_bind.cpp  rts_capabil.cpp  rts_command.cpp  (+45 more)
core-cpp/src/runtime/: crc64.cpp  dispatch.cpp  extended_header.cpp  header.cpp  metadata.cpp  oracle.cpp
core-cpp/src/transport/: connection_loopback.cpp  connection_tcp.cpp  framer_v3.cpp  io_runtime.cpp  io_runtime.hpp  net_compat_posix.cpp  net_compat_winsock.cpp  net_iface.cpp  policy.cpp
core-cpp/tests/: codec_test.cpp  cross_runtime_py_test.cpp  cross_runtime_ts_tcp_test.cpp  ergo_test.cpp  framer_overflow_test.cpp  metadata_overflow_test.cpp  negative_corpus_test.cpp  oracle_parity_test.cpp  transport_loopback_test.cpp  transport_sync_test.cpp  transport_tcp_test.cpp  upstream_fixtures_test.cpp
core-cpp/tests/fixtures/: cpp_tcp_echo.cpp  python_tcp_echo.py
core-py/: API.md  NET_GUIDE.md  PLAN.md  README.md  TRANSPORT_PLAN.md  pyproject.toml
core-py/benches/: bench_arrays_compare.py  bench_numpy.py  bench_typed.py
core-py/docs/history/: numpy_arrays_plan.md  transport_plan.md
core-py/examples/: resilient_client.py
core-py/src/oigtl/: __init__.py  codec.py  oracle_cli.py  semantic.py
core-py/tests/: test_cli.py  test_codec.py  test_cross_runtime_cpp.py  test_cross_runtime_ts_tcp.py  test_cross_runtime_ts_ws.py  test_dispatch_and_oracle.py  test_negative_corpus.py  test_net_client.py  test_net_framer.py  test_net_gateway.py  test_net_integration.py  test_net_interfaces.py  test_net_policy.py  test_net_resilience.py  test_net_server.py  test_net_server_restrictions.py  test_net_sync_client.py  test_net_sync_server.py  test_net_ws.py  test_registry.py  test_round_trip_all.py  test_semantic.py  test_transform_round_trip.py  test_variable_arrays.py
corpus-tools/: README.md  pyproject.toml
corpus-tools/reference-libs/: README.md
corpus-tools/reference-libs/upstream-oracle/: CMakeLists.txt  README.md  oracle_cli.cpp  upstream_generator_cli.cpp
corpus-tools/scripts/: benchmark_vs_pyigtl.py
corpus-tools/src/oigt_corpus_tools/: __init__.py  __main__.py  cli.py  paths.py
corpus-tools/tests/: test_c_upstream_verifier.py  test_codec.py  test_codegen_cpp.py  test_fuzz_differential.py  test_negative_corpus.py  test_oracle.py  test_schema_validate.py
(+672 files in other folders)
